# grpc-todo

./: .gitignore  Cargo.toml  README.md  makefile.toml  todo.db-shm  todo.db-wal
grpc-todo/: Cargo.toml  build.rs
grpc-todo/migrations/: 20250407170735_create_todos.sql
grpc-todo/proto/: todo.proto
grpc-todo/src/: config.rs  db.rs  main.rs  server.rs
htmx-warp/src/: main.rs
htmx-wrap/: Cargo.toml  build.rs
htmx-wrap/proto/: todo.proto
htmx-wrap/src/: index.html  main.rs
migrations/: 20250410104232_create_table.sql
