[package]
name = "grpc-todo"
build = "build.rs"
edition.workspace = true
version.workspace = true
    
[build-dependencies]
tonic-build = { workspace = true }

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
tonic-web = { workspace = true }
tower-http = { workspace = true }